# log-slayer

./: .gitignore  ;  LICENSE  README.md  meson.build  meson_options.txt
apps/: meson.build
apps/example/: meson.build
apps/lslayer/include/: Context.hpp  EventHandler.hpp  Recorder.hpp
apps/lslayer/src/: main.cpp
apps/server/: meson.build
apps/server/include/: Context.hpp  EventHandler.hpp  Recorder.hpp
apps/server/src/: main.cpp
client/include/log-slayer/client/: FunctionFilter.hpp  ProfileFunction.hpp  StaticFilterRules.hpp
client/src/: InstrumentFunctions.cpp
config/log-slayer/config/: config.in  meson.build
example/: main.cpp  meson.build
lib/include/log-slayer/lib/: FunctionAddress.hpp  HookType.hpp  SharedMemory.hpp  StaticOptions.hpp  ThreadRegion.hpp  ThreadRegions.hpp  Timestamp.hpp  TraceEvent.hpp  TraceEvents.hpp
libs/: meson.build
libs/client/: meson.build
libs/client/include/log-slayer/client/: ProfileFunction.hpp  ThreadLocalStats.hpp
libs/client/src/: InstrumentFunctions.cpp
libs/common/include/common/: CommunicationTable.hpp  ControlBlock.hpp  SharedMemory.hpp  ThreadRegion.hpp  ThreadRegions.hpp  Timestamp.hpp  TraceEvent.hpp  TraceEvents.hpp
libs/config/: meson.build
libs/instrument/: meson.build
libs/instrument/include/instrument/: FunctionFilter.hpp  ProfileFunction.hpp  ThreadLocalStats.hpp
libs/instrument/src/: InstrumentFunctions.cpp
libs/lib/: meson.build
libs/lib/include/log-slayer/lib/: ControlBlock.hpp  SharedMemoryGuard.hpp  ThreadRegion.hpp
server/: meson.build
server/include/: EventHandler.hpp  Recorder.hpp  Statistics.hpp  StatisticsPrinter.hpp
server/src/: main.cpp
